--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Dashboard</title>
-    <script src="https://cdn.powerbi.com/libs/powerbi-client/latest/powerbi.min.js"></script>
-    <script src="/static/script.js" defer></script>
-
+    <title>Document</title>
 </head>
 <body>
-    <h2>Bem-vindo ao seu Dashboard</h2>
-    <div id="dashboardContainer" style="width: 100%; height: 600px;"></div>
+    
 </body>
 </html>
