--- a/templates/admin/login_admin.html
+++ b/templates/admin/login_admin.html
@@ -92,14 +92,15 @@
 
 
                         <div class="account-text text-center mt-3">
-                            <p>Não possui uma conta? 
-                                <a href="{{ url_for('cliente.cadastro') }}" style="color: blue; text-decoration: underline;">
+                            <p>Não possui uma conta?
+                                <a href="{{ url_for('cliente.cadastro') }}"
+                                    style="color: blue; text-decoration: underline;">
 
                             </p>
-                            
+
+                        </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
