--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -147,13 +147,14 @@
                     <p class="fs-5">+12% Mensal</p>
                 </div>
             </div>
-
             <div>
-                <div class="card text-center">
-                    <i class="fas fa-handshake fa-3x text-secondary"></i>
-                    <h4 class="mt-3">Negociações</h4>
-                    <p class="fs-5">8 Este Mês</p>
-                </div>
+                <a href="{{ url_for('admin.negociacoes') }}" style="text-decoration: none; color: inherit;">
+                    <div class="card text-center shadow-sm hover:shadow-lg transition">
+                        <i class="fas fa-handshake fa-3x text-secondary mt-3"></i>
+                        <h4 class="mt-3">Negociações</h4>
+                        <p class="fs-5">8 Este Mês</p>
+                    </div>
+                </a>
             </div>
             
             <div>
